updated for last two projects

--- a/_posts/2020-03-09-CHS.md
+++ b/_posts/2020-03-09-CHS.md
@@ -1,6 +1,11 @@
 ---
 layout: post
-title: The Age of Anxiety in New York: A Data Inquiry in Public Health
+title: Community Health and The Depression Epidemic
+subtitle: Introduction
+gh-repo: tallywiesenberg/CHS
+gh-badge: [star, fork, follow]
+tags: [data-analysis, public-health, open-data]
+comments: true
 ---
 
 # The Age of Anxiety in New York: A Data Inquiry in Public Health
